Freestyle > 'As Render Pass' doesn't work #91803

Closed
opened 2021-09-29 11:18:50 +02:00 by Nico Traber · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-25 hash: 5ef3afd87c
Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-24 hash: eec1ea0ccf

Short description of error
Render Pass: Freestyle > 'As Render Pass' unfortunately does not work as expected.

3.0.0 Alpha:
3.0.0-alpha_scene_view-layer_freestyle_as-render-pass_ticked.png

2.93.4:
2.93.4_scene_view-layer_freestyle_as-render-pass_ticked.png

freestyle_as-render-pass.blend

Exact steps for others to reproduce the error
Does work:

  • On 'Render Properties' tab tick 'Freestyle'
  • Do a render / hit F12

Does not work:

  • On 'Render Properties' tab tick 'Freestyle'
  • On 'View Layer Properties' tab in 'Freestyle' subpanel tick 'As Render Pass'
  • Make a basic compositing with Freestyle node (attached Blender file)
  • Do a render / hit F12.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-25 hash: `5ef3afd87c` Worked: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-24 hash: `eec1ea0ccf` **Short description of error** Render Pass: Freestyle > 'As Render Pass' unfortunately does not work as expected. 3.0.0 Alpha: ![3.0.0-alpha_scene_view-layer_freestyle_as-render-pass_ticked.png](https://archive.blender.org/developer/F10669338/3.0.0-alpha_scene_view-layer_freestyle_as-render-pass_ticked.png) 2.93.4: ![2.93.4_scene_view-layer_freestyle_as-render-pass_ticked.png](https://archive.blender.org/developer/F10669340/2.93.4_scene_view-layer_freestyle_as-render-pass_ticked.png) [freestyle_as-render-pass.blend](https://archive.blender.org/developer/F10669337/freestyle_as-render-pass.blend) **Exact steps for others to reproduce the error** Does work: - On 'Render Properties' tab tick 'Freestyle' - Do a render / hit F12 Does not work: - On 'Render Properties' tab tick 'Freestyle' - On 'View Layer Properties' tab in 'Freestyle' subpanel tick 'As Render Pass' - Make a basic compositing with Freestyle node (attached Blender file) - Do a render / hit F12.
Author

Added subscriber: @Nico-Traber

Added subscriber: @Nico-Traber
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 0cddbcf1d7

This issue was referenced by 0cddbcf1d7054c10c483061d9eaf92eedca3d976

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-09-29 21:26:30 +02:00
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91803
No description provided.