Fix T91803: Freestyle rendering as pass broken after recent changes