source/blender/render/RE_pipeline.h
@@ -233,7 +233,8 @@ void RE_create_render_pass(struct RenderResult *rr,
                            int channels,
                            const char *chan_id,
                            const char *layername,
-                           const char *viewname);
+                           const char *viewname,
+                           const bool allocate);
 
 /* obligatory initialize call, disprect is optional */
 void RE_InitState(struct Render *re,
